add solution to exercise 4 not bonus

--- a/ToolsAppDemo/ToolsAppDemo/Client/_Imports.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using ToolsAppDemo.Client
 @using ToolsAppDemo.Client.Shared
 @using ToolsAppDemo.Client.ColorTool
+@using ToolsAppDemo.Client.CarTool
