--- a/ToolsAppDemo/ToolsAppDemo/Client/Shared/NavMenu.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/Shared/NavMenu.razor
@@ -1,8 +1,8 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">ToolsAppDemo</a>
-    <button class="navbar-toggler" @onclick="ToggleNavMenu">
-        <span class="navbar-toggler-icon"></span>
-    </button>
+  <a class="navbar-brand" href="">ToolsAppDemo</a>
+  <button class="navbar-toggler" @onclick="ToggleNavMenu">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
@@ -27,16 +27,21 @@
         <span class="oi oi-list-rich" aria-hidden="true"></span> Color Tool
       </NavLink>
     </li>
+    <li class="nav-item px-3">
+      <NavLink class="nav-link" href="car-tool">
+        <span class="oi oi-list-rich" aria-hidden="true"></span> Car Tool
+      </NavLink>
+    </li>
   </ul>
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
+  private bool collapseNavMenu = true;
 
-    private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
+  private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
 
-    private void ToggleNavMenu()
-    {
-        collapseNavMenu = !collapseNavMenu;
-    }
+  private void ToggleNavMenu()
+  {
+    collapseNavMenu = !collapseNavMenu;
+  }
 }
