--- a/ToolsAppDemo/ToolsAppDemo/Client/Pages/CarTool.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/Pages/CarTool.razor
@@ -3,8 +3,9 @@
 @using ToolsAppDemo.Shared
 
 <ToolHeader HeaderText="Car Tool" />
-<CarTable Cars=@cars />
+<CarTable Cars=@cars OnDeleteCar="deleteCar" />
 <CarForm ButtonText="Add Car" OnSubmitCar="addCar" />
+<ToolFooter CompanyName="A Cool Company, Inc." />
 
 @code {
   private List<Car> cars = new List<Car>() {
@@ -23,6 +24,12 @@
   private void addCar(Car car) {
     car.Id = cars.Max(c => c.Id) + 1;
     cars.Add(car);
+  }
+
+  private void deleteCar(long carId)
+  {
+    var car = cars.Find(c => c.Id == carId);
+    cars.Remove(car);
   }
 
 }
