--- a/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarTable.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarTable.razor
@@ -15,7 +15,7 @@
   <tbody>
     @foreach (var car in Cars)
     {
-      <CarViewRow Car=@car OnDeleteCar="deleteCar" />
+      <CarViewRow Car=@car OnDeleteCar=@OnDeleteCar />
     }
   </tbody>
 </table>
@@ -27,8 +27,8 @@
   [Parameter]
   public EventCallback<long> OnDeleteCar { get; set; }
 
-  private async Task deleteCar(long carId)
-  {
-    await OnDeleteCar.InvokeAsync(carId);
-  }
+  //private async Task deleteCar(long carId)
+  //{
+  //  await OnDeleteCar.InvokeAsync(carId);
+  //}
 }
