--- a/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarViewRow.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarViewRow.razor
@@ -7,7 +7,7 @@
   <td>@Car.Year</td>
   <td>@Car.Color</td>
   <td>@Car.Price</td>
-  <td><button type="button" @onclick="deleteCar">Delete</button></td>
+  <td><button type="button" @onclick=@(() => OnDeleteCar.InvokeAsync(Car.Id))>Delete</button></td>
 </tr>
 
 @code {
@@ -17,8 +17,8 @@
   [Parameter]
   public EventCallback<long> OnDeleteCar { get; set; }
 
-  private async Task deleteCar()
-  {
-    await OnDeleteCar.InvokeAsync(Car.Id);
-  }
+  //private async Task deleteCar()
+  //{
+  //  await OnDeleteCar.InvokeAsync(Car.Id);
+  //}
 }
