--- a/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarViewRow.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarViewRow.razor
@@ -8,6 +8,7 @@
   <td>@Car.Color</td>
   <td>@Car.Price</td>
   <td><button type="button" @onclick=@(() => OnDeleteCar.InvokeAsync(Car.Id))>Delete</button></td>
+  <td><button type="button" @onclick=@(() => OnEditCar.InvokeAsync(Car.Id))>Edit</button></td>
 </tr>
 
 @code {
@@ -16,6 +17,10 @@
 
   [Parameter]
   public EventCallback<long> OnDeleteCar { get; set; }
+
+  [Parameter]
+  public EventCallback<long> OnEditCar { get; set; }
+
 
   //private async Task deleteCar()
   //{
