--- a/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarViewRow.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarViewRow.razor
@@ -7,8 +7,8 @@
   <td>@Car.Year</td>
   <td>@Car.Color</td>
   <td>@Car.Price</td>
-  <td><button type="button" @onclick=@(() => OnDeleteCar.InvokeAsync(Car.Id))>Delete</button></td>
-  <td><button type="button" @onclick=@(() => OnEditCar.InvokeAsync(Car.Id))>Edit</button></td>
+  <td><button type="button" @onclick=@deleteCar>Delete</button></td>
+  <td><button type="button" @onclick=@editCar>Edit</button></td>
 </tr>
 
 @code {
@@ -22,8 +22,14 @@
   public EventCallback<long> OnEditCar { get; set; }
 
 
-  //private async Task deleteCar()
-  //{
-  //  await OnDeleteCar.InvokeAsync(Car.Id);
-  //}
+  private async Task deleteCar()
+  {
+    await OnDeleteCar.InvokeAsync(Car.Id);
+  }
+
+  private async Task editCar()
+  {
+    await OnEditCar.InvokeAsync(Car.Id);
+  }
+
 }
