--- a/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarEditRow.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarEditRow.razor
@@ -1,6 +1,8 @@
 ﻿@using ToolsAppDemo.Shared
 @using CarFormView = ToolsAppDemo.Client.ViewModels.CarForm
 
+
+
 <tr>
   <td>@Car.Id</td>
   <td><input type="text" @bind="carForm.Make" /></td>
@@ -8,8 +10,8 @@
   <td><input type="number" @bind="carForm.Year" /></td>
   <td><input type="text" @bind="carForm.Color" /></td>
   <td><input type="number" @bind="carForm.Price" /></td>
-  <td><button type="button">Save</button></td>
-  <td><button type="button">Cancel</button></td>
+  <td><button type="button" @onclick=@saveCar>Save</button></td>
+  <td><button type="button" @onclick=@cancelCar>Cancel</button></td>
 </tr>
 
 @code {
@@ -28,23 +30,30 @@
       Color = Car.Color,
       Price = Car.Price,
     };
-   }
+  }
 
-  //[Parameter]
-  //public EventCallback<long> OnDeleteCar { get; set; }
+  [Parameter]
+  public EventCallback<Car> OnSaveCar { get; set; }
 
-  //[Parameter]
-  //public EventCallback<long> OnEditCar { get; set; }
+  [Parameter]
+  public EventCallback OnCancelCar { get; set; }
 
 
-  //private async Task deleteCar()
-  //{
-  //  await OnDeleteCar.InvokeAsync(Car.Id);
-  //}
+  private async Task saveCar()
+  {
+    await OnSaveCar.InvokeAsync(new Car() {
+      Id = Car.Id,
+      Make = carForm.Make,
+      Model = carForm.Model,
+      Year = carForm.Year,
+      Color = carForm.Color,
+      Price = carForm.Price,
+    });
+  }
 
-  //private async Task editCar()
-  //{
-  //  await OnEditCar.InvokeAsync(Car.Id);
-  //}
+  private async Task cancelCar()
+  {
+    await OnCancelCar.InvokeAsync();
+  }
 
 }
