--- a/ToolsAppDemo/ToolsAppDemo/Client/Pages/ColorTool.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/Pages/ColorTool.razor
@@ -1,5 +1,9 @@
 ﻿@page "/color-tool"
 
+@using ToolsAppDemo.Client.Interfaces 
+
+@inject IColorsDataService colorsDataSvc
+
 @using ToolsAppDemo.Shared
 
 
@@ -8,17 +12,18 @@
 <ColorForm ButtonText="Add Color" OnSubmitColor="addColor" />
 
 @code {
-  private List<Color> colors = new List<Color>()
+  private IEnumerable<Color> colors;
+
+  protected override void OnInitialized()
   {
-    new Color() { Id=1, Name="red", HexCode="ff0000" },
-    new Color() { Id=2, Name="green", HexCode="00ff00" },
-    new Color() { Id=3, Name="blue", HexCode="0000ff" },
-  };
+    base.OnInitialized();
+
+    colors = colorsDataSvc.Colors;
+  }
 
   private void addColor(Color color)
   {
-    color.Id = colors.Max(c => c.Id) + 1;
-    colors.Add(color);
+    colorsDataSvc.AddColor(color);
   }
 
 }
