--- a/ToolsAppDemo/ToolsAppDemo/Client/ColorTool/ColorList.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/ColorTool/ColorList.razor
@@ -4,7 +4,9 @@
   @foreach (var color in Colors)
   {
     <li>
-      @color.Name <button type="button" @onclick=@(() => setShowDetailsColorId(color.Id))>View Details</button>
+      @color.Name
+      <button type="button" @onclick=@(() => setShowDetailsColorId(color.Id))>View Details</button>
+      <a href="/color-tool/@Uri.EscapeUriString(color.Id.ToString())">Details Page</a>
 
       @if (showDetailsColorId == color.Id) {  
         <div>
