--- a/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarForm.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/CarTool/CarForm.razor
@@ -1,64 +1,71 @@
 @using ToolsAppDemo.Shared
 @using CarFormView = ToolsAppDemo.Client.ViewModels.CarForm
 
-<form>
+<EditForm Model="carForm" OnValidSubmit="submitCar">
+
+  <DataAnnotationsValidator />
+  <ValidationSummary />
   <div>
     <label>
       Make
-      <input type="text" @bind="carForm.Make" />
+      <InputText @bind-Value="carForm.Make" />
+      <ValidationMessage For=@(() => carForm.Make) style="display:inline;" />
     </label>
   </div>
   <div>
     <label>
       Model
-      <input type="text" @bind="carForm.Model" />
+      <InputText @bind-Value="carForm.Model" />
     </label>
   </div>
   <div>
     <label>
       Year
-      <input type="number" @bind="carForm.Year" />
+      <InputNumber @bind-Value="carForm.Year" />
+      <ValidationMessage For=@(() => carForm.Year) style="display:inline;" />
     </label>
   </div>
   <div>
     <label>
       Color
-      <input type="text" @bind="carForm.Color" />
+      <InputText @bind-Value="carForm.Color" />
     </label>
   </div>
   <div>
     <label>
       Price
-      <input type="number" @bind="carForm.Price" />
+      <InputNumber @bind-Value="carForm.Price" />
     </label>
   </div>
-  <button type="button" @onclick="submitCar">@ButtonText</button>
-</form>
+  <button type="submit">@ButtonText</button>
+ </EditForm>
 
-@code {
+  @code {
 
-  [Parameter]
-  public string ButtonText { get; set; } = "Submit Color";
+    [Parameter]
+    public string ButtonText { get; set; } = "Submit Color";
 
-  [Parameter]
-  public EventCallback<Car> OnSubmitCar { get; set; }
+    [Parameter]
+    public EventCallback<Car> OnSubmitCar { get; set; }
 
-  private CarFormView carForm = new CarFormView();
+    private CarFormView carForm = new CarFormView();
 
-  private async Task submitCar() {
+    private async Task submitCar()
+    {
 
-    var car = new Car() {
-      Make = carForm.Make,
-      Model = carForm.Model,
-      Year = carForm.Year,
-      Color = carForm.Color,
-      Price = carForm.Price,
-    };
+      var car = new Car()
+      {
+        Make = carForm.Make,
+        Model = carForm.Model,
+        Year = carForm.Year,
+        Color = carForm.Color,
+        Price = carForm.Price,
+      };
 
-    await OnSubmitCar.InvokeAsync(car);
+      await OnSubmitCar.InvokeAsync(car);
 
-    carForm = new CarFormView();
+      carForm = new CarFormView();
+    }
+
+
   }
-
-
-}
