--- a/ToolsAppDemo/ToolsAppDemo/Client/Pages/CarTool.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/Pages/CarTool.razor
@@ -4,6 +4,7 @@
 @using ToolsAppDemo.Client.Interfaces
 
 @inject ICarsDataService carsDataSvc
+@inject IJSRuntime JS
 
 <ToolHeader HeaderText="Car Tool" />
 <CarTable Cars=@cars EditCarId=@editCarId
@@ -23,7 +24,7 @@
   }
 
   private async Task refreshCars() {
-     cars = await carsDataSvc.All();
+    cars = await carsDataSvc.All();
   }
 
   private async Task addCar(Car car) {
@@ -41,9 +42,11 @@
 
   private async Task deleteCar(long carId)
   {
-    await carsDataSvc.DeleteCar(carId);
-    editCarId = -1;
-    await refreshCars();
+    if (await JS.InvokeAsync<bool>("confirm", "Are you sure you want to delete this car?")) {
+      await carsDataSvc.DeleteCar(carId);
+      editCarId = -1;
+      await refreshCars();
+    }
   }
 
   private void editCar(long carId)
