--- a/ToolsAppDemo/ToolsAppDemo/Client/Pages/Index.razor
+++ b/ToolsAppDemo/ToolsAppDemo/Client/Pages/Index.razor
@@ -1,6 +1,9 @@
 ﻿@page "/"
 
+@using ToolsAppDemo.Client.Interfaces
+
 @inject IJSRuntime JS
+@inject IColorsDataService colorsDataSvc
 
 <h1>Hello, world!</h1>
 
@@ -15,11 +18,28 @@ Welcome to your new app.
 
 <div>Text Value: @textValue</div>
 
+<button type="button" id="refresh-colors-button">Refresh Colors</button>
+
 
 @code {
 
   private string textValue = "psea";
 
+  private DotNetObjectReference<IColorsDataService> colorsDataSvcRef;
+
+  protected override async Task OnAfterRenderAsync(bool firstRender)
+  {
+    if (firstRender)
+    {
+      colorsDataSvcRef = DotNetObjectReference.Create(colorsDataSvc);
+      await JS.InvokeVoidAsync("toolsAppDemo.setupColorsRefresh", colorsDataSvcRef);
+    }
+  }
+
+  public void Dispose()
+  {
+    colorsDataSvcRef?.Dispose();
+  }
 
   private async Task doIt()
   {
